# otus_homework2

./: .gitignore
.github/workflows/: ci-ip-filter.yml
homework_2/: CMakeLists.txt
homework_2/src/: main.cpp
